--- a/src/client/views/BookedData.form
+++ b/src/client/views/BookedData.form
@@ -239,7 +239,7 @@
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
               <SubComponents>
-                <Component class="client.components.CustomTable" name="schedule_data">
+                <Component class="client.components.CustomTable" name="booking_data">
                   <Properties>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
